PharmaDemo/src/objects/Calls__c.object
<CustomObject>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Frequency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Frequency</label>
        <referenceTo>TF__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Calls</label>
    <nameField>
        <label>Calls No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>